--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип сайта &laquo;Оно тебе надо&raquo; ">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип сайта &laquo;Оно тебе надо&raquo; ">
       </a>
       <address class="adress header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
