Выполнены выравнивания по PixelPerfect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" src="./images/logo-black.svg" width="148px" height="105px" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
+        <img class="header__logo-image" src="./images/logo-black.svg" width="148" height="105" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
       </a>
       <address class="adress header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -105,7 +105,7 @@
       </section>
       <section class="about">
         <div class="about__column about__logo">
-          <img class="about__logo-image" width="148px" height="114px" src="./images/logo-white.svg" alt="">
+          <img class="about__logo-image" width="148" height="114" src="./images/logo-white.svg" alt="">
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -149,17 +149,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на YouTube">
+            <img class="footer__social-icon" width="48" height="48" src="./images/yt.svg" alt="Ссылка на YouTube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на ВКонтакте">
+            <img class="footer__social-icon" width="48" height="48" src="./images/vk.svg" alt="Ссылка на ВКонтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Ссылка на Pinterest">
+            <img class="footer__social-icon" width="48" height="48" src="./images/pinterest.svg" alt="Ссылка на Pinterest">
           </a>
         </li>
       </ul>
