Выполнены выравнивания по PixelPerfect

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
-                  Фильм режиссёра, который бросил киношколу
+                  Фильм режиссёра,&nbsp;который бросил киношколу
                 </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
