--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header__menu">
+      <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active">Главная</a>
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link_active">Главная</a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="">Посмотреть лоты</a>
+          <li>
+            <a href="#0">Посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="">Об аукционе</a>
+          <li>
+            <a href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" src="./images/logo-black.svg" width="148" height="105" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
+        <img src="./images/logo-black.svg" width="148" height="105" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
       </a>
-      <address class="adress header__address">
+      <address class="adress">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
@@ -37,9 +37,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">О<span class="letter-spacing-extended">но</span></span>
-          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+          <span>О<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -56,7 +56,7 @@
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
-                  Фильм режиссёра,&nbsp;который бросил киношколу
+                  Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
@@ -128,38 +128,38 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="adress footer__address">
+      <address class="adress">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
       </address>
-      <nav class="footer__menu">
+      <nav>
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">Главная</a>
+          <li>
+            <a class="footer__menu-link_active">Главная</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#0">Посмотреть лоты</a>
+          <li>
+            <a href="#0">Посмотреть лоты</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#0">Об аукционе</a>
+          <li>
+            <a href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
-        <li class="footer__social-list-item">
+        <li>
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" width="48" height="48" src="./images/yt.svg" alt="Ссылка на YouTube">
+            <img src="./images/yt.svg" width="48" height="48" alt="Ссылка на YouTube">
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" width="48" height="48" src="./images/vk.svg" alt="Ссылка на ВКонтакте">
+            <img src="./images/vk.svg" width="48" height="48" alt="Ссылка на ВКонтакте">
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" width="48" height="48" src="./images/pinterest.svg" alt="Ссылка на Pinterest">
+            <img src="./images/pinterest.svg" width="48" height="48" alt="Ссылка на Pinterest">
           </a>
         </li>
       </ul>
