--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav>
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active">Главная</a>
+            <a class="header__link header__link_active" href="#0">Главная</a>
           </li>
           <li>
-            <a href="#0">Посмотреть лоты</a>
+            <a class="header__link" href="#0">Посмотреть лоты</a>
           </li>
           <li>
-            <a href="#0">Об аукционе</a>
+            <a class="header__link" href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,9 +28,9 @@
         <img src="./images/logo-black.svg" width="148" height="105" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
       </a>
       <address class="adress">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+        <a class="adress__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -45,7 +45,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -105,7 +105,7 @@
       </section>
       <section class="about">
         <div class="about__column about__logo">
-          <img class="about__logo-image" width="148" height="114" src="./images/logo-white.svg" alt="">
+          <img class="about__logo-image" width="148" height="114" src="./images/logo-white.svg" alt="Логотип сайта &laquo;Оно тебе надо&raquo;">
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -129,37 +129,37 @@
     </main>
     <footer class="footer">
       <address class="adress">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265, <br>Амстердам</p>
+        <a class="adress__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
         <ul class="footer__menu-list">
           <li>
-            <a class="footer__menu-link_active">Главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#0">Главная</a>
           </li>
           <li>
-            <a href="#0">Посмотреть лоты</a>
+            <a class="footer__menu-link" href="#0">Посмотреть лоты</a>
           </li>
           <li>
-            <a href="#0">Об аукционе</a>
+            <a class="footer__menu-link" href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li>
           <a class="footer__social-link" href="#0">
-            <img src="./images/yt.svg" width="48" height="48" alt="Ссылка на YouTube">
+            <img class="footer__social-link-image" src="./images/yt.svg" width="48" height="48" alt="Ссылка на YouTube">
           </a>
         </li>
         <li>
           <a class="footer__social-link" href="#0">
-            <img src="./images/vk.svg" width="48" height="48" alt="Ссылка на ВКонтакте">
+            <img class="footer__social-link-image" src="./images/vk.svg" width="48" height="48" alt="Ссылка на ВКонтакте">
           </a>
         </li>
         <li>
           <a class="footer__social-link" href="#0">
-            <img src="./images/pinterest.svg" width="48" height="48" alt="Ссылка на Pinterest">
+            <img class="footer__social-link-image" src="./images/pinterest.svg" width="48" height="48" alt="Ссылка на Pinterest">
           </a>
         </li>
       </ul>
